--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/svelte": "^7.0.3",
     "@astrojs/tailwind": "^5.1.4",
+    "@iconify/react": "^5.2.1",
     "@swup/astro": "^1.5.0",
     "astro": "^5.3.0",
     "astro-icon": "^1.1.5",
