--- a/package.json
+++ b/package.json
@@ -10,18 +10,29 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/react": "^4.2.4",
     "@astrojs/rss": "^4.0.11",
-    "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/svelte": "^7.0.3",
-    "@astrojs/tailwind": "^5.1.4",
+    "@astrojs/sitemap": "^3.3.0",
+    "@astrojs/svelte": "^7.0.10",
+    "@radix-ui/react-slot": "^1.2.0",
     "@swup/astro": "^1.5.0",
-    "astro": "^5.3.0",
+    "@tailwindcss/vite": "^4.1.4",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "astro": "^5.7.4",
     "astro-icon": "^1.1.5",
     "astro-pagefind": "^1.7.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lozad": "^1.16.0",
+    "lucide-react": "^0.501.0",
     "overlayscrollbars": "^2.10.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "svelte": "^5.17.4",
-    "tailwindcss": "^3.4.17",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.2.5",
     "typescript": "^5.7.3"
   },
   "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
