--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
     "@astrojs/svelte": "^7.0.10",
+    "@astrojs/vercel": "^8.1.3",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-checkbox": "^1.2.2",
     "@radix-ui/react-label": "^2.1.4",
