--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
   "devDependencies": {
+    "@astrojs/cloudflare": "^12.5.1",
     "@iconify-json/cuida": "^1.2.2",
     "@iconify-json/dashicons": "^1.2.1",
     "@iconify-json/heroicons": "^1.2.2",
