--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,9 @@
 name = "sdeepmone"
-pages_build_output_dir = "./dist"
+type = "javascript"
+workers_dev = true
 compatibility_date = "2024-04-24"
 
+[build]
+command = "npm run build"
+upload.format = "modules"
+upload.dir = "./dist"
